--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,9 @@
+univention-ad-connector (8.0.17-5) unstable; urgency=medium
+
+  * Bug #33657: Adjust wizard window hight
+
+ -- Arvid Requate <requate@univention.de>  Tue, 11 Feb 2014 12:44:06 +0100
+
 univention-ad-connector (8.0.17-4) unstable; urgency=medium
 
   * Bug #33657: Move the message to the wizzard window.
