* Bug #33947: Further fixes * Bug #33946: Wording
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47742 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-appcenter (3.0.50-21) unstable; urgency=low
+
+  * Bug #33947: Further fixes
+  * Bug #33946: Wording
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 11 Feb 2014 15:09:15 +0100
+
 univention-management-console-module-appcenter (3.0.50-20) unstable; urgency=low
 
   * Bug #33548: When querying during a release update of UCS, the target
