Bug #33194: updater: maintenance policy
Only check for release-updates when allowed by policy

Remove deprecated option from help output.

Fix variable name in help output.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@47744 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.38-12) unstable; urgency=low
+
+  * Only check for release-updates when allowed by policy (Bug #33194)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 11 Feb 2014 15:10:38 +0100
+
 univention-updater (9.0.38-11) unstable; urgency=low
 
   * Fix attribute name (Bug #33189)
