update {post,pre}up.sh for 3.2-1 (Bug #34085)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@47750 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.38-13) unstable; urgency=low
+
+  * update {post,pre}up.sh for 3.2-1 (Bug #34085)
+
+ -- Janek Walkenhorst <walkenhorst@univention.de>  Tue, 11 Feb 2014 16:50:41 +0100
+
 univention-updater (9.0.38-12) unstable; urgency=low
 
   * Only check for release-updates when allowed by policy (Bug #33194)
