* To prevent an incomplete config file the content is written   to a temporary file and renamed in an atomic operation   (Bug #33842)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@47796 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,11 @@
+univention-config-registry (9.0.5-6) unstable; urgency=low
+
+  * To prevent an incomplete config file the content is written
+    to a temporary file and renamed in an atomic operation
+    (Bug #33842)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 13 Feb 2014 21:47:26 +0100
+
 univention-config-registry (9.0.5-5) unstable; urgency=medium
 
   * move userNameMapping and groupNameMapping to univention-lib (Bug #33889)
