--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,9 @@
+univention-config-registry (9.0.5-7) unstable; urgency=low
+
+  * Preserve permissions of the traget multifile (Bug #33842)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 13 Feb 2014 22:14:27 +0100
+
 univention-config-registry (9.0.5-6) unstable; urgency=low
 
   * To prevent an incomplete config file the content is written
