* Bump version (Bug #33842)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@47801 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,9 @@
+univention-config-registry (9.0.6-1) unstable; urgency=low
+
+  * Bump version (Bug #33842)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 14 Feb 2014 06:57:46 +0100
+
 univention-config-registry (9.0.5-7) unstable; urgency=low
 
   * Preserve permissions of the traget multifile (Bug #33842)
