* Bug #34096: The join script failed when the App Center server could not be reached while registering all installed apps. This causes problems during the installation of UCS. Now the join script does not fail anymore, it just silently skips this point. The script univention-register-apps has been added that may be re-run if this was only a temporary problem.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@47811 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,13 @@
+univention-management-console-module-appcenter (3.0.51-1) unstable; urgency=low
+
+  * Bug #34096: The join script failed when the App Center server could not be
+    reached while registering all installed apps. This causes problems during
+    the installation of UCS. Now the join script does not fail anymore, it
+    just silently skips this point. The script univention-register-apps has
+    been added that may be re-run if this was only a temporary problem.
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Fri, 14 Feb 2014 10:48:56 +0100
+
 univention-management-console-module-appcenter (3.0.50-21) unstable; urgency=low
 
   * Bug #33947: Further fixes
