* Atomic write: Improve code and error handling (Bug #33842)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@47818 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,9 @@
+univention-config-registry (9.0.6-4) unstable; urgency=low
+
+  * Atomic write: Improve code and error handling (Bug #33842)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Fri, 14 Feb 2014 13:37:11 +0100
+
 univention-config-registry (9.0.6-3) unstable; urgency=low
 
   * Use a more random name for the temporary file (Bug #33842)
