Bug #33842: test/ucr: Add atomic commit tests
Add test to check file permissions of committed files.

Add test to check for atomic commit.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@47831 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.161-38) unstable; urgency=low
+
+  * 03ucr: Add atomic commit tests (Bug #33842)
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 14 Feb 2014 17:23:57 +0100
+
 ucs-test (4.0.161-37) unstable; urgency=medium
 
   * Let 50_samba/41password_change run on memberservers (Bug #32382)
