* scripts/89_tests.sh: the listener may restart the OpenLDAP server.   Re-try the join check for 60 seconds (Bug #34133)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@47840 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-installer/debian/changelog
+++ b/base/univention-installer/debian/changelog
@@ -1,3 +1,10 @@
+univention-installer (9.0.31-1) unstable; urgency=low
+
+  * scripts/89_tests.sh: the listener may restart the OpenLDAP server.
+    Re-try the join check for 60 seconds (Bug #34133)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 17 Feb 2014 07:32:36 +0100
+
 univention-installer (9.0.30-5) unstable; urgency=low
 
   * Enforce UTF-8 encoding when setting locale (Bug #33916)
