--- a/base/univention-installer/debian/changelog
+++ b/base/univention-installer/debian/changelog
@@ -1,3 +1,10 @@
+univention-installer (9.0.32-1) unstable; urgency=low
+
+  * scripts/89_tests.sh: excplicit call exit 0 at the end of the join
+    test (Bug #34133)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 17 Feb 2014 09:05:42 +0100
+
 univention-installer (9.0.31-1) unstable; urgency=low
 
   * scripts/89_tests.sh: the listener may restart the OpenLDAP server.
