* Bug #34183: Renamed the button for buying an app from "Shop" to "Buy"
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@48028 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/umc/js/de.po
+++ b/management/univention-management-console-module-appcenter/umc/js/de.po
@@ -619,8 +619,8 @@ msgid "Section"
 msgstr "Kategorie"
 
 #: umc/js/appcenter/AppDetailsPage.js:140
-msgid "Shop"
-msgstr "Shop"
+msgid "Buy"
+msgstr "Kaufen"
 
 #: umc/js/appcenter/PackagesPage.js:78
 msgid "Show details"
