--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.50-23) unstable; urgency=low
+
+  * Bug #34183: Renamed the button for buying an app from "Shop" to "Buy"
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 24 Feb 2014 12:53:41 +0100
+
 univention-management-console-module-appcenter (3.0.50-22) unstable; urgency=low
 
   * Bug #34096: The join script failed when the App Center server could not be
