* Bug #34183: Renamed the button for buying an app from "Shop" to "Buy"
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48029 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.51-2) unstable; urgency=low
+
+  * Bug #34183: Renamed the button for buying an app from "Shop" to "Buy"
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 24 Feb 2014 12:53:41 +0100
+
 univention-management-console-module-appcenter (3.0.51-1) unstable; urgency=low
 
   * Bug #34096: The join script failed when the App Center server could not be
