* Bug #34181: The progress bar does not have a transition anymore if the value is "Infinity".
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48080 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.152-22) unstable; urgency=low
+
+  * Bug #34181: The progress bar does not have a transition anymore if the
+    value is "Infinity".
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Mon, 24 Feb 2014 17:30:10 +0100
+
 univention-management-console-frontend (3.0.152-21) unstable; urgency=low
 
   * Bug #31855: Check flavor when searching for unique modules
