* Bug #34117: Also the the LDAP Base DN if the license is "Free for personal use"
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48081 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-udm/debian/changelog
+++ b/management/univention-management-console-module-udm/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-udm (4.0.97-18) unstable; urgency=low
+
+  * Bug #34117: Also the the LDAP Base DN if the license is "Free for personal
+    use"
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 25 Feb 2014 10:05:19 +0100
+
 univention-management-console-module-udm (4.0.97-17) unstable; urgency=low
 
   * Bug #33329: Refactor setting first nonemtpy value
