--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-appcenter (3.0.51-3) unstable; urgency=low
+
+  * Bug #34145: Whitelisting and blacklisting now works with the applications'
+    ID and on unlocalised data
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 25 Feb 2014 10:28:37 +0100
+
 univention-management-console-module-appcenter (3.0.51-2) unstable; urgency=low
 
   * Bug #34183: Renamed the button for buying an app from "Shop" to "Buy"
