* Bug #34145: Document whitelisting and blacklisting
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48122 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.51-4) unstable; urgency=low
+
+  * Bug #34145: Document whitelisting and blacklisting
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 26 Feb 2014 10:09:35 +0100
+
 univention-management-console-module-appcenter (3.0.51-3) unstable; urgency=low
 
   * Bug #34145: Whitelisting and blacklisting now works with the applications'
