--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-adtakeover (1.0.10-1) unstable; urgency=medium
+
+  * Add backend routines for adtakeover/connect
+  * Show tracebacks, at least during development phase (Bug #34139)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 27 Feb 2014 19:02:53 +0100
+
 univention-management-console-module-adtakeover (1.0.9-2) unstable; urgency=low
 
   * Bug #34019: install graphics
