--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,11 @@
+univention-management-console-module-adtakeover (1.0.10-2) unstable; urgency=medium
+
+  * Improve robustness of adtakeover/connect (e.g. check against local system)
+  * Perform AD LDAP precheck to reduce authentication delay against wrong IP
+  * Fix json traceback block on due to non-string Exceptions (Bug #34139)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 27 Feb 2014 21:39:31 +0100
+
 univention-management-console-module-adtakeover (1.0.10-1) unstable; urgency=medium
 
   * Add backend routines for adtakeover/connect
