do net set "cache_dir null /tmp" if squid/cache is false (Bug #33332)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48221 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-squid/debian/changelog
+++ b/services/univention-squid/debian/changelog
@@ -1,3 +1,9 @@
+univention-squid (7.0.3-3) unstable; urgency=low
+
+  * do net set "cache_dir null /tmp" if squid/cache is false (Bug #33332)
+
+ -- Felix Botner <botner@univention.de>  Fri, 28 Feb 2014 14:01:04 +0100
+
 univention-squid (7.0.3-2) unstable; urgency=low
 
   * removed squid/sslports (Bug #32183) 
