--- a/services/univention-squid-kerberos/debian/changelog
+++ b/services/univention-squid-kerberos/debian/changelog
@@ -1,3 +1,9 @@
+univention-squid-kerberos (3.0.2-2) unstable; urgency=low
+
+  * modify sp account if already existing (Bug #33779)
+
+ -- Felix Botner <botner@univention.de>  Mon, 03 Mar 2014 14:50:46 +0100
+
 univention-squid-kerberos (3.0.2-1) unstable; urgency=low
 
   * check local ldap for univentionService=S4 Connector
