--- a/services/univention-squid-kerberos/debian/changelog
+++ b/services/univention-squid-kerberos/debian/changelog
@@ -1,3 +1,9 @@
+univention-squid-kerberos (3.0.2-3) unstable; urgency=low
+
+  * added saltPrincipal to samba4 keytab (secrets.ldb) (Bug #32292) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 03 Mar 2014 15:19:20 +0100
+
 univention-squid-kerberos (3.0.2-2) unstable; urgency=low
 
   * modify sp account if already existing (Bug #33779)
