* Add backend functions for adtakeover/run/copy and adtakeover/run/takeover   (Bug #34139)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48276 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-module-adtakeover (1.0.10-3) unstable; urgency=medium
+
+  * Add backend functions for adtakeover/run/copy and adtakeover/run/takeover
+    (Bug #34139)
+
+ -- Arvid Requate <requate@univention.de>  Mon, 03 Mar 2014 20:48:06 +0100
+
 univention-management-console-module-adtakeover (1.0.10-2) unstable; urgency=medium
 
   * Improve robustness of adtakeover/connect (e.g. check against local system)
