--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.162-1) unstable; urgency=low
+
+  * Bug #34173: added constant for UDM CLI wrapper
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 04 Mar 2014 15:44:29 +0100
+
 ucs-test (4.0.161-38) unstable; urgency=low
 
   * 03ucr: Add atomic commit tests (Bug #33842)
