* Fixed syntax in german translation file (Bug #34139)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48341 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-adtakeover/umc/python/adtakeover/de.po
+++ b/management/univention-management-console-module-adtakeover/umc/python/adtakeover/de.po
@@ -41,7 +41,7 @@ msgstr "Mindestens eine GPO fehlt noch im SYSVOL."
 
 #: takeover.py:191
 msgid "Something is wrong with the SYSVOL."
-msgstr ""
+msgstr "Etwas stimmt nicht mit dem SYSVOL."
 
 #: takeover.py:194
 msgid "The Active Directory server seems to be running. It must be shut off."
@@ -142,6 +142,5 @@ msgid "The automatic search for an Active Directory server for realm %s did not 
 msgstr "Die automatische Suche eines Active Directory Servers für den Kerberos Realm %s lieferte keine Ergebnisse."
 
 #: takeover.py:1857
-msgid "Cannot determine AD site."
 msgid "Faild to detect the Active Directory site of the server."
 msgstr "Die Erkennung des Active Directory Standorts (site) des Servers schlug fehl."
