--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-6) unstable; urgency=medium
+
+  * Fixed syntax in german translation file (Bug #34139)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 05 Mar 2014 13:08:20 +0100
+
 univention-management-console-module-adtakeover (1.0.10-5) unstable; urgency=medium
 
   * Revised error messages and added german translation (Bug #34139)
