--- a/management/univention-management-console-module-adtakeover/umc/python/adtakeover/de.po
+++ b/management/univention-management-console-module-adtakeover/umc/python/adtakeover/de.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: univention-management-console-module-reboot\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2014-03-05 10:49+0100\n"
+"POT-Creation-Date: 2014-03-05 13:37+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -55,11 +55,138 @@ msgstr "Die Zeitsynchronisierung schlug fehl."
 
 #: takeover.py:200
 msgid "Time difference critical for Kerberos but synchronization aborted."
-msgstr "Die Zeitdifferenz ist zu groß für Kerberos aber die Synchronisierung schlug fehl."
+msgstr ""
+"Die Zeitdifferenz ist zu groß für Kerberos aber die Synchronisierung schlug "
+"fehl."
 
 #: takeover.py:203
 msgid "Insufficient License."
 msgstr "Die Lizenz reicht nicht aus."
+
+#: takeover.py:224 takeover.py:245
+#, python-format
+msgid "Connecting to %s"
+msgstr ""
+
+#: takeover.py:227 takeover.py:249
+msgid "Authenticating"
+msgstr "Authentifizierung"
+
+#: takeover.py:230
+msgid "Retrieving information from AD DC"
+msgstr "Abfrage von Informationen vom AD DC"
+
+#: takeover.py:253
+msgid "Synchronizing System Clock"
+msgstr "Synchronisation der Systemzeit"
+
+#: takeover.py:259
+msgid "Joining the domain"
+msgstr "Domänenbeitritt"
+
+#: takeover.py:263
+msgid "Starting Samba"
+msgstr "Start von Samba"
+
+#: takeover.py:266
+msgid "Rewriting SIDs in the UCS directory service"
+msgstr "Umschreibung der SIDs im UCS Verzeichnisdienst"
+
+#: takeover.py:269
+msgid "Initializing the S4 Connector listener"
+msgstr "Initialisierung des S4 Connector Listeners"
+
+#: takeover.py:273
+msgid "Starting the S4 Connector"
+msgstr "Start des S4 Connectors"
+
+#: takeover.py:277
+msgid "Rebuilding IDMAP"
+msgstr "Erstellung der IDMAP Tabelle"
+
+#: takeover.py:309
+#, python-format
+msgid "Search for %s in network"
+msgstr "Netzwerksuche nach %s"
+
+#: takeover.py:314
+msgid "Taking over Active Directory domaincontroller roles"
+msgstr "Übernahme der Active Directory Domaincontroller Rollen"
+
+#: takeover.py:315
+msgid "Adjusting settings in Samba directory service"
+msgstr "Anpassung von Einstellungen im Samba Verzeichnisdienst "
+
+#: takeover.py:319
+msgid "Removing the previous AD server account"
+msgstr "Entfernen des alten AD Server Kontos"
+
+#: takeover.py:323
+msgid "Taking over DNS address"
+msgstr "Übernahme der DNS Adresse"
+
+#: takeover.py:326
+msgid "Taking over NETBIOS address"
+msgstr "Übernahme der NETBIOS Adresse"
+
+#: takeover.py:329
+msgid "Taking over IP address"
+msgstr "Übernahme der IP Adresse"
+
+#: takeover.py:332
+msgid "Registering IP in DNS"
+msgstr "Registrierung der IP im DNS"
+
+#: takeover.py:335
+msgid "Reconfiguring nameserver"
+msgstr "Rekonfigurierung des Nameservers"
+
+#: takeover.py:338
+msgid "Claiming FSMO roles"
+msgstr "Übernahme der FSMO Rollen"
+
+#: takeover.py:341
+msgid "Finalizing"
+msgstr "Abschluss"
+
+#: takeover.py:374
+msgid "Checking group policies"
+msgstr "Prüfung der Gruppenrichtlinien"
+
+#: takeover.py:376
+msgid "Checking GPOs in SYSVOL"
+msgstr "Prüfung der GPO-Daten im SYSVOL"
+
+#: takeover.py:426
+#, python-format
+msgid "Internal module error: Refusing to set invalid state '%s'."
+msgstr "Interner Modulfehler: Setzen des ungültigen Status '%s' abgelehnt."
+
+#: takeover.py:443
+#, python-format
+msgid "Internal module error: Cannot go from state '%s' to state '%s'."
+msgstr "Interner Modulfehler: Übergang von Status '%s' zu Status '%s' ist nicht möglich."
+
+#: takeover.py:448
+msgid "Internal module error: Takeover running, aborting attempt to restart."
+msgstr "Interner Modulfehler: Takeover läuft, Neustartversuch abgebrochen."
+
+#: takeover.py:453
+#, python-format
+msgid ""
+"Internal module error: Expected to be in state 'sysvol', but found '%s'."
+msgstr "Interner Modulfehler: Zustand 'sysvol' erwartet, aber '%s' gefunden."
+
+#: takeover.py:458
+#, python-format
+msgid ""
+"Internal module error: Expected to be in state 'takeover', but found '%s'."
+msgstr "Interner Modulfehler: Zustand 'takeover' erwartet, aber '%s' gefunden."
+
+#: takeover.py:479
+#, python-format
+msgid "Invalid state in file %s"
+msgstr "Ungültige Zustands-Datei %s"
 
 #: takeover.py:551
 msgid "Internal Error: License check failed."
@@ -69,8 +196,9 @@ msgstr "Interner Fehler ver der Prüfung der Lizenz."
 msgid ""
 "The selected Active Directory server has the same NTDS GUID as this UCS "
 "server."
-msgstr "Der angegebene Active Directory Server hat die gleiche NTDS GUID "
-"wie dieser UCS Server."
+msgstr ""
+"Der angegebene Active Directory Server hat die gleiche NTDS GUID wie dieser "
+"UCS Server."
 
 #: takeover.py:625
 msgid "Failed to determine AD domain SID."
@@ -79,15 +207,17 @@ msgstr "Die SID der AD-Domäne konnte nicht festgestellt werden."
 #: takeover.py:756
 #, python-format
 msgid "AD Server did not return proper time string: %s."
-msgstr "Der Active Directory Server lieferte eine unerwartete Zeitangabe zurück: %s."
+msgstr ""
+"Der Active Directory Server lieferte eine unerwartete Zeitangabe zurück: %s."
 
 #: takeover.py:764
 #, python-format
 msgid ""
 "Remote clock is behind local clock by more than %s seconds, refusing to turn "
 "back time."
-msgstr "Die Uhr des Active Directory Servers liegt hinter der lokalen Zeit um "
-"mehr als %s Sekunden zurück. Die lokale Zeit kann nicht zurückgestellt werden."
+msgstr ""
+"Die Uhr des Active Directory Servers liegt hinter der lokalen Zeit um mehr "
+"als %s Sekunden zurück. Die lokale Zeit kann nicht zurückgestellt werden."
 
 #: takeover.py:775
 #, python-format
@@ -102,7 +232,8 @@ msgstr "Interner Fehler beim Lesen des Maschinenpassworts: %s"
 #: takeover.py:864
 #, python-format
 msgid "The domain join failed. See %s for details."
-msgstr "Der Domänenbeitritt schlug fehl, die Logdatei %s enthält genauere Details."
+msgstr ""
+"Der Domänenbeitritt schlug fehl, die Logdatei %s enthält genauere Details."
 
 #: takeover.py:927
 msgid "Failed to determine new domain SID."
@@ -110,7 +241,9 @@ msgstr "Die neue Domänen-SID konnte nicht festgestellt werden."
 
 #: takeover.py:1269 takeover.py:1277
 msgid "The Active Directory domain join was not completed successfully yet."
-msgstr "Der Beitritt zur Active Directory Domäne wurde noch nicht erfolgreich abgeschlossen."
+msgstr ""
+"Der Beitritt zur Active Directory Domäne wurde noch nicht erfolgreich "
+"abgeschlossen."
 
 #: takeover.py:1296
 msgid "Active Directory takeover finished already."
@@ -119,7 +252,12 @@ msgstr "Active Directory Takeover ist schon abgeschlossen."
 #: takeover.py:1321
 #, python-format
 msgid "The Server IP %s is still online, please shut down the machine."
-msgstr "Die Server IP %s ist noch online, die Maschine sollte ausgeschaltet werden."
+msgstr ""
+"Die Server IP %s ist noch online, die Maschine sollte ausgeschaltet werden."
+
+#: takeover.py:1775
+msgid " failed"
+msgstr ""
 
 #: takeover.py:1778
 #, python-format
@@ -138,9 +276,23 @@ msgstr "Die Verbindung zum Active Directory Server %s schlug fehl."
 
 #: takeover.py:1833
 #, python-format
-msgid "The automatic search for an Active Directory server for realm %s did not yield any results."
-msgstr "Die automatische Suche eines Active Directory Servers für den Kerberos Realm %s lieferte keine Ergebnisse."
+msgid ""
+"The automatic search for an Active Directory server for realm %s did not "
+"yield any results."
+msgstr ""
+"Die automatische Suche eines Active Directory Servers für den Kerberos Realm "
+"%s lieferte keine Ergebnisse."
 
 #: takeover.py:1857
 msgid "Faild to detect the Active Directory site of the server."
-msgstr "Die Erkennung des Active Directory Standorts (site) des Servers schlug fehl."
+msgstr ""
+"Die Erkennung des Active Directory Standorts (site) des Servers schlug fehl."
+
+#: takeover.py:2289
+msgid "UNC doesn't start with \\\\ or //"
+msgstr "UNC Pfad startet nicht mit \\\\ oder //"
+
+#: takeover.py:2296
+#, python-format
+msgid "Invalid UNC string: %s"
+msgstr "Ungültiger UNC Pfad: %s"
