--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-9) unstable; urgency=medium
+
+  * Additional translation fixes (Bug #34139)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 05 Mar 2014 14:27:21 +0100
+
 univention-management-console-module-adtakeover (1.0.10-8) unstable; urgency=medium
 
   * Check in the updated translation file (Bug #34139)
