ucs-test (4.0.161-2) unstable; urgency=low
  * do not create objects directly below ldap base in tests in order to be
    ucs@school slave compatible (Bug #33825)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48357 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,10 @@
+ucs-test (4.0.161-2) unstable; urgency=low
+
+  * do not create objects directly below ldap base in tests in order to be
+    ucs@school slave compatible (Bug #33825)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 05 Mar 2014 15:45:42 +0100
+
 ucs-test (4.0.162-1) unstable; urgency=low
 
   * Bug #34173: added constant for UDM CLI wrapper
