--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.161-3) unstable; urgency=low
+
+  * version bump (Bug #33825)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 05 Mar 2014 15:57:21 +0100
+
 ucs-test (4.0.161-2) unstable; urgency=low
 
   * do not create objects directly below ldap base in tests in order to be
