* fix finished status (Bug #34139)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48359 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-10) UNRELEASED; urgency=medium
+
+  * fix finished status (Bug #34139)
+
+ -- Arvid Requate <requate@univention.de>  Wed, 05 Mar 2014 15:57:20 +0100
+
 univention-management-console-module-adtakeover (1.0.10-9) unstable; urgency=medium
 
   * Additional translation fixes (Bug #34139)
