* Additional translation fix (Bug #34139)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48376 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-13) unstable; urgency=medium
+
+  * Additional translation fix (Bug #34139)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 06 Mar 2014 10:09:47 +0100
+
 univention-management-console-module-adtakeover (1.0.10-12) unstable; urgency=medium
 
   * Indicate when a AD Takeover has been completed before
