--- a/management/univention-management-console-module-adtakeover/debian/changelog
+++ b/management/univention-management-console-module-adtakeover/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-adtakeover (1.0.10-14) unstable; urgency=medium
+
+  * Cleanup timer development code (Bug #34139)
+
+ -- Arvid Requate <requate@univention.de>  Thu, 06 Mar 2014 10:11:36 +0100
+
 univention-management-console-module-adtakeover (1.0.10-13) unstable; urgency=medium
 
   * Additional translation fix (Bug #34139)
