Bug #34127: Add support for RedMine issues in changelog
Bug #26183: Fix testucslint.sh broken since split into extra package.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48396 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/packaging/ucslint/debian/changelog
+++ b/packaging/ucslint/debian/changelog
@@ -1,3 +1,10 @@
+ucslint (3.0.5-2) unstable; urgency=low
+
+  * Bug #34127: Add support for RedMine issues in changelog
+  * Bug #26183: Fix testucslint.sh broken since split into extra package.
+
+ -- Philipp Hahn <hahn@univention.de>  Fri, 07 Mar 2014 09:53:15 +0100
+
 ucslint (3.0.5-1) unstable; urgency=low
 
   * Bug #26183: moved univention specific tests to extra package
