* Bug #34288: Implement method for retrieval of own IP address in umc-web-server
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48409 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,10 @@
+univention-management-console-frontend (3.0.153-1) unstable; urgency=low
+
+  * Bug #34288: Implement method for retrieval of own IP address in
+  	umc-web-server
+
+ -- Florian Best <best@univention.de>  Fri, 07 Mar 2014 14:38:08 +0100
+
 univention-management-console-frontend (3.0.152-22) unstable; urgency=low
 
   * Bug #34181: The progress bar does not have a transition anymore if the
