Bug #34241: UCR: Fix atomic write to preserve old file permission
In UCS-3.2-0 UCR overwrites any existing file and such keeps the file
permission and ownership.
This was changed for UCS-3.2-1 to do a atomic commit, which writes to a
new file first and renames that afterwards.

While the file permission was kept, the file ownership was not kept.
This only shows when no explicit owner / group is specified, but the
ownership is changed through an explicit call to "chown" by hand.

Add copy to copy the ownership information from the old file before
applying the explicitly specified changes.

Fix ucs-test to explicitly test using "chown".

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48422 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,9 @@
+univention-config-registry (9.0.6-5) unstable; urgency=low
+
+  * Fix atomic write to preserve old file permission (Bug #34241)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 04 Mar 2014 10:52:50 +0100
+
 univention-config-registry (9.0.6-4) unstable; urgency=low
 
   * Atomic write: Improve code and error handling (Bug #33842)
