--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,9 @@
+univention-config-registry (9.0.6-6) unstable; urgency=low
+
+  * Find modified templates by checking MD5 sums (Bug #24010)
+
+ -- Philipp Hahn <hahn@univention.de>  Mon, 10 Mar 2014 12:50:06 +0100
+
 univention-config-registry (9.0.6-5) unstable; urgency=low
 
   * Fix atomic write to preserve old file permission (Bug #34241)
