--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.163-2) unstable; urgency=low
+
+  * Fix syntax errors in 72/23,25 (Bug #33825)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 11 Mar 2014 08:33:42 +0100
+
 ucs-test (4.0.163-1) unstable; urgency=low
 
   * 03ucr: Fix atomic commit tests to keep manual changes (Bug #34241)
