--- a/mail/univention-mail-postfix/debian/changelog
+++ b/mail/univention-mail-postfix/debian/changelog
@@ -1,3 +1,9 @@
+univention-mail-postfix (8.0.10-3) unstable; urgency=low
+
+  * use user listfilter for listfilter postfix policy (Bug #26910) 
+
+ -- Felix Botner <botner@univention.de>  Tue, 11 Mar 2014 12:23:10 +0100
+
 univention-mail-postfix (8.0.10-2) unstable; urgency=low
 
   * use user listfilter for listfilter postfix policy (Bug #26910) 
