--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,9 @@
+univention-config-registry (9.0.6-7) unstable; urgency=low
+
+  * template-check: Work-around missing debian.deb822 (Bug #24010)
+
+ -- Philipp Hahn <hahn@univention.de>  Tue, 11 Mar 2014 15:38:55 +0100
+
 univention-config-registry (9.0.6-6) unstable; urgency=low
 
   * Find modified templates by checking MD5 sums (Bug #24010)
