Bug #34328: ucs-test: Fix app NPE
Move dereference after check.

git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48473 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.164-3) unstable; urgency=low
+
+  * 20_app/17: Fix NPE (Bug #34328)
+
+ -- Philipp Hahn <hahn@univention.de>  Wed, 12 Mar 2014 18:35:48 +0100
+
 ucs-test (4.0.164-2) unstable; urgency=low
 
   * 03_ucr/36check-modified-templates: added a small test case to
