* Show the note in /etc/issue and /etc/welcome.msg where to find the   UCS management system only on master, backup, slave and member   (Bug #34330)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-1@48475 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,11 @@
+univention-base-files (3.0.4-4) unstable; urgency=low
+
+  * Show the note in /etc/issue and /etc/welcome.msg where to find the
+    UCS management system only on master, backup, slave and member
+    (Bug #34330)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 13 Mar 2014 07:15:04 +0100
+
 univention-base-files (3.0.4-3) unstable; urgency=medium
 
   * Add ntp/noquery (Bug #33834)
